--- a/www/dawaNon.html
+++ b/www/dawaNon.html
@@ -54,7 +54,7 @@
 		    <div class="form-group">
                 <label for="natList">الجنسية</label>
                 <span class="label label-danger" data-ng-show="submitted && helpForm.natList.$error.required">Required!</span>                
-                <select id="natList" name="natList" data-ng-model="natList" data-ng-options="id as value for (id, value) in natListOptions" class="form-control">
+                <select id="natList" name="natList" data-ng-model="natList" data-ng-options="id as value for (id, value) in natList" class="form-control">
                 <option value=""></option>
                 </select>
             </div>
