--- a/www/dawaNon.html
+++ b/www/dawaNon.html
@@ -61,7 +61,7 @@
             
 		    <div class="form-group">
                 <label for="langList">اللغة</label>
-                <select id="langList" name="langList" data-ng-model="langList" data-ng-options="id as value for (id, value) in langListOptions" class="form-control">
+                <select id="langList" name="langList" data-ng-model="langList" data-ng-options="id as value for (id, value) in langList" class="form-control">
                 <option value=""></option>
                 </select>
             </div>
