--- a/www/translate.html
+++ b/www/translate.html
@@ -75,14 +75,14 @@
 		    <div class="form-group">
                 <label dir="rtl" for="natList">جنسية الخادمة</label>
                 <span class="label label-danger" data-ng-show="submitted && helpForm.natList.$error.required">Required!</span>                
-                <select id="natList" name="natList" data-ng-model="natList" data-ng-options="id as value for (id, value) in natListOptions" class="form-control">
+                <select id="natList" name="natList" data-ng-model="natList" data-ng-options="id as value for (id, value) in natList" class="form-control">
                 <option value=""></option>
                 </select>
             </div>            
             
 		    <div class="form-group">
                 <label dir="rtl" for="langList">لغة الخادمة</label>
-                <select id="langList" name="langList" data-ng-model="langList" data-ng-options="id as value for (id, value) in langListOptions" class="form-control">
+                <select id="langList" name="langList" data-ng-model="langList" data-ng-options="id as value for (id, value) in langList" class="form-control">
                 <option value=""></option>
                 </select>
             </div>          
@@ -93,7 +93,7 @@
             
 		    <div class="form-group">
                 <label dir="rtl" for="langList">نوع الترجمة</label>
-                <select id="langList" name="typeList" data-ng-model="typeList" data-ng-options="id as value for (id, value) in langListOptions" class="form-control">
+                <select id="langList" name="typeList" data-ng-model="typeList" data-ng-options="id as value for (id, value) in typeList" class="form-control">
                 <option value=""></option>
                 </select>
             </div>              
