--- a/www/care.html
+++ b/www/care.html
@@ -27,7 +27,7 @@
       </ion-header-bar>
 
       <ion-content>    
-		<img src="img/rajhi_charity.png" style="margin: 0 auto;">
+		<img src="img/rajhi_charity.png" style="width:260px;margin:0 auto">
 <p dir="rtl">هذا التطبيق برعاية مؤسسة سليمان بن عبد العزيز الراجحي الخيرية ( فرع المنطقة الشرقية )</p><br><br>
 
 <p dir="rtl">
