--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
         </div>      
 <br><br> 
         <a href="menupage.html" class="btn btn-success btn-lg btn-block btn-default">
-            <p style="font-size: 30px;text-align: center;">نرحب بكم</p>
+            <p style="font-size: 30px;text-align: center; color:#fff;">نرحب بكم</p>
         </a>      
       </ion-content>
     </ion-pane>
